2009-12-01  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/IdePreferences.cs: By default, don't
	  show output pad when after building.

2009-12-01  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/RootWorkspace.cs:
	* MonoDevelop.Ide.Gui/ProjectOperations.cs:
	* MonoDevelop.Ide.Commands/ProjectCommands.cs:
	* MonoDevelop.Ide.Gui/ConfigurationComboBox.cs:
	* MonoDevelop.Ide.Gui.Dialogs/NewProjectDialog.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs:
	  Introduced the ConfigurationSelector class to all methods
	  that previously took a configuration name as string. This
	  eliminates the ambiguity between solution configuration
	  names and project configuration names.

2009-11-25  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.Ide.Gui.OptionPanels/BuildMessagePanel.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.BuildMessagePanelWidget.cs:
	  Worked on build message panel.

2009-11-25  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* gtk-gui/generated.cs:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.Tasks/TaskStore.cs:
	* MonoDevelop.Ide.Gui/IdePreferences.cs:
	* MonoDevelop.Ide.Gui/ProgressMonitors.cs:
	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs:
	* MonoDevelop.Ide.Gui/ProjectOperations.cs:
	* gtk-gui/MonoDevelop.Ide.DocumentSwitcher.cs:
	* MonoDevelop.Ide.Gui/OutputProgressMonitor.cs:
	* MonoDevelop.Ide.Gui.Pads/DefaultMonitorPad.cs:
	* MonoDevelop.Ide.Gui.OptionPanels/BuildPanel.cs:
	* gtk-gui/MonoDevelop.Ide.SelectEncodingsDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.GoToDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewFileDialog.cs:
	* gtk-gui/MonoDevelop.Ide.OverridesImplementsDialog.cs:
	* MonoDevelop.Ide.Gui.OptionPanels/BuildMessagePanel.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewLayoutDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewProjectDialog.cs: